--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@tiptap/extension-character-count": "^2.22.3",
     "@tiptap/extension-placeholder": "^2.22.3",
     "@tiptap/extension-typography": "^2.22.3",
     "@tiptap/react": "^2.22.3",
     "@tiptap/starter-kit": "^2.22.3",
-    "react-icons": "^5.5.0",
+    "date-fns": "^3.6.0",
+    "lucide-react": "^0.469.0",
     "next": "15.1.3",
+    "next-auth": "^4.24.5",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.48.2",
+    "react-icons": "^5.5.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
