fix: improve TipTap editor text visibility in dark mode

--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "@tiptap/extension-character-count": "^2.22.3",
+    "@tiptap/extension-link": "^2.24.2",
     "@tiptap/extension-placeholder": "^2.22.3",
+    "@tiptap/extension-text-align": "^2.24.2",
     "@tiptap/extension-typography": "^2.22.3",
+    "@tiptap/extension-underline": "^2.24.2",
     "@tiptap/react": "^2.22.3",
     "@tiptap/starter-kit": "^2.22.3",
     "bcryptjs": "^3.0.2",
