--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.11.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@tailwindcss/forms": "^0.5.10",
